--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "barkodx---akıllı-envanter",
-  "private": true,
-  "version": "0.0.0",
+  "private": true,  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npx cap add ios || true"
   },
   "dependencies": {
     "react": "^19.2.0",
