--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,17 @@ apply plugin: 'com.android.application'
 android {
     namespace "com.barkodx.app"
     compileSdk rootProject.ext.compileSdkVersion
+    signingConfigs {
+        release {
+            // This is a sample signing configuration.
+            // You should generate your own private key and replace these values.
+            // See: https://developer.android.com/studio/publish/app-signing
+            storeFile file("release.keystore")
+            storePassword "password"
+            keyAlias "alias"
+            keyPassword "password"
+        }
+    }
     defaultConfig {
         applicationId "com.barkodx.app"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -18,6 +29,7 @@ android {
     }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
